Revert "🔥 remove legacy frontends (#903)"
This reverts commit 9d860fa52ecf08ef76ac55273ad5cbcc96175f98.
